--- a/frontend/src/app/page/components/palette-builder/page-block/page-block.component.html
+++ b/frontend/src/app/page/components/palette-builder/page-block/page-block.component.html
@@ -6,6 +6,6 @@
 <!--    <app-grid-item class="grid-stack-item" [gridItemConfig]="gridNode" *ngFor="let gridNode of pageBlock.paletteGridItems; trackBy: trackByGridItem"></app-grid-item>-->
 <!--  </div>-->
   <div class="block-content-rows container" [sortablejs]="rows" [sortablejsOptions]="{group: {name: 'block', put: ['menu-row']}, handle: '.move-row', onStart: onDragStart, onEnd: onDragEnd}">
-    <app-grid-row class="row" [row]="row" *ngFor="let row of rows"></app-grid-row>
+    <app-grid-row (removeRow$)="removeRow(i)" class="row" [row]="row" *ngFor="let row of rows; index as i"></app-grid-row>
   </div>
 </div>
