--- a/frontend/src/app/page/components/palette-builder/page-block/page-block.component.css
+++ b/frontend/src/app/page/components/palette-builder/page-block/page-block.component.css
@@ -51,7 +51,7 @@
 }
 
 .block-content-rows {
-  min-height: 200px;
+  min-height: 65px;
 }
 
 .block-row {
@@ -79,4 +79,27 @@
 
 .block-content-rows.container {
   max-width: 100%;
+}
+
+.line:before {
+  content: '';
+  position: absolute;
+  top: 53%;
+  left: 0;
+  border-top: 1px solid rgba(255,255,255,.25);
+  background: black;
+  width: 100%;
+  transform: translateY(-50%);
+}
+
+.line {
+  position: relative;
+}
+
+.links {
+  position: relative;
+}
+
+.new-row-input-button {
+  background: white;
 }
