--- a/frontend/src/app/page/components/menu-new-row/menu-new-row.component.css
+++ b/frontend/src/app/page/components/menu-new-row/menu-new-row.component.css
@@ -1,3 +1,8 @@
 .menu-container{
-  max-width: 100px;
+  max-width: 290px;
+}
+
+.menu-num-container:hover {
+  background: lightgrey;
+  cursor: pointer;
 }
