--- a/frontend/src/app/page/components/palette-builder/page-block/page-block.component.html
+++ b/frontend/src/app/page/components/palette-builder/page-block/page-block.component.html
@@ -10,7 +10,7 @@
   </div>
   <div class="text-center line">
     <div class="links">
-      <button mat-icon-button class="new-row-input-button">
+      <button mat-icon-button [matMenuTriggerFor]="menu" class="new-row-input-button">
         <mat-icon>add_circle</mat-icon>
       </button>
     </div>
