--- a/frontend/src/app/page/components/palette-builder/page-block/page-block.component.html
+++ b/frontend/src/app/page/components/palette-builder/page-block/page-block.component.html
@@ -6,7 +6,16 @@
 <!--    <app-grid-item class="grid-stack-item" [gridItemConfig]="gridNode" *ngFor="let gridNode of pageBlock.paletteGridItems; trackBy: trackByGridItem"></app-grid-item>-->
 <!--  </div>-->
   <div class="block-content-rows container" [sortablejs]="rows" [sortablejsOptions]="{group: {name: 'block', put: ['menu-row']}, handle: '.move-row', onStart: onDragStart, onEnd: onDragEnd}">
-    <app-grid-row (removeRow$)="removeRow(i)" class="row" [row]="row" *ngFor="let row of rows; index as i"></app-grid-row>
+    <div *ngFor="let row of rows; index as i">
+      <app-animation-hider [show]="i===hoverOnIndexRow || i===hoverOnIndexRow+1">
+        <div class="new-row-up">
+          <button mat-icon-button [matMenuTriggerFor]="menu" class="new-row-input-button" [matMenuTriggerData]="{index: i}">
+            <mat-icon class="add-icon-row-up">add_circle</mat-icon>
+          </button>
+        </div>
+      </app-animation-hider>
+      <app-grid-row (removeRow$)="removeRow(i)" class="row" [row]="row" (mouseenter)="hoverOnIndexRow=i"></app-grid-row>
+    </div>
   </div>
   <div class="text-center line">
     <div class="links">
@@ -18,5 +27,7 @@
 </div>
 
 <mat-menu #menu="matMenu">
-  <app-menu-new-row (numColumns)="addRow($event)"></app-menu-new-row>
+  <ng-template matMenuContent let-index="index">
+    <app-menu-new-row (numColumns)="addRow($event, index)"></app-menu-new-row>
+  </ng-template>
 </mat-menu>
