--- a/frontend/src/app/page/components/grid-cell/grid-cell.component.html
+++ b/frontend/src/app/page/components/grid-cell/grid-cell.component.html
@@ -13,11 +13,24 @@
   <div class="add-del-cell-container">
     <div class="left-add-del-cell">
       <mat-icon class="add-cell-icon-left add-cell-icon" fontIcon="add" (click)="addCell$.emit('left')"></mat-icon>
-      <mat-icon class="del-cell-icon-left del-cell-icon" fontIcon="remove" (click)="removeCell$.emit('left')"></mat-icon>
+      <mat-icon [matMenuTriggerFor]="menu" class="del-cell-icon-left del-cell-icon" fontIcon="remove" [matMenuTriggerData]="{rightPanel: false}"></mat-icon>
     </div>
-    <div class="right-add-del-cell">
+    <div class="right-add-del-cell" *ngIf="isLast">
       <mat-icon class="add-cell-icon-right add-cell-icon" fontIcon="add" (click)="addCell$.emit('right')"></mat-icon>
-      <mat-icon class="del-cell-icon-right del-cell-icon" fontIcon="remove" (click)="removeCell$.emit('right')"></mat-icon>
+      <mat-icon [matMenuTriggerFor]="menu" class="del-cell-icon-right del-cell-icon" fontIcon="remove" [matMenuTriggerData]="{rightPanel: true}"></mat-icon>
     </div>
   </div>
 </app-animation-hider>
+
+
+<mat-menu #menu="matMenu">
+  <ng-template matMenuContent let-rightPanel="rightPanel">
+    <div class="container">
+      <h6>Jakou buňku smazat?</h6>
+      <div class="d-flex flex-wrap menu-container">
+        <button type="button" class="btn btn-light" (click)="removeCell$.emit({site: 'left', isRightPanel: rightPanel})">Vlevo</button>
+        <button type="button" class="btn btn-light" (click)="removeCell$.emit({site: 'right', isRightPanel: rightPanel})">Vpravo</button>
+      </div>
+    </div>
+  </ng-template>
+</mat-menu>
