--- a/frontend/src/app/page/components/grid-cell-item/grid-cell-item.component.html
+++ b/frontend/src/app/page/components/grid-cell-item/grid-cell-item.component.html
@@ -6,13 +6,13 @@
   <app-animation-hider [show] = "showMoveIcon" class="move-icon-cell-item-container" (mouseenter)="isMoveMenuHover=true" (mouseleave)="isMoveMenuHover=false">
     <div class="plugin-move-menu">
       <div class="frameCover">
-        <div title="Nastavení" class="btn draganddrop" (click)="openSettings()">
+        <div title="Nastavení" class="btn draganddrop" (click)="openSettings()" *ngIf="!gridCellItem.row">
           <i class="material-icons icon-settings">settings</i>
         </div>
-        <div title="Přesunout" class="btn draganddrop">
+        <div title="Přesunout" class="btn draganddrop icon-move-cell">
           <i class="material-icons icon-move-cell-item">open_with</i>
         </div>
-        <div title="Smazat" class="btn draganddrop">
+        <div title="Smazat" class="btn draganddrop" (click)="delete()">
           <i class="material-icons icon-remove">delete</i>
         </div>
       </div>
