--- a/frontend/src/app/page/components/grid-cell/grid-cell.component.html
+++ b/frontend/src/app/page/components/grid-cell/grid-cell.component.html
@@ -2,9 +2,12 @@
      [sortablejs]="cell.items"
      [sortablejsOptions]="{group: {name: 'cell', pull: true, put: ['menu-row', 'menu-plugin', 'cell']},
      onStart: onDragStart, onEnd: onDragEnd, onAdd: onAdd,
-     handle: '.icon-move-cell-item'}"
+     handle: '.icon-move-cell'}"
 >
-  <app-grid-cell-item [gridCellItem]="item" *ngFor="let item of cell.items; trackBy: trackByItem" [isDeepChild]="isDeepChild"></app-grid-cell-item>
+  <app-grid-cell-item [gridCellItem]="item" *ngFor="let item of cell.items; trackBy: trackByItem; index as i"
+                      [isDeepChild]="isDeepChild"
+                      (deleteItem)="deleteItem(i)"
+  ></app-grid-cell-item>
 </div>
 <div *ngIf="!isLast" class="cell-delimiter" (mousedown)="onMouseDownResizeDelimiter($event);">
   <div class="delimiter-line"></div>
