--- a/frontend/src/app/page/pages/page-builder/page-builder.component.html
+++ b/frontend/src/app/page/pages/page-builder/page-builder.component.html
@@ -9,7 +9,7 @@
   </div>
 </div>
 <div class="row" [class.grid-item-dragged]="gridDragged$ | async">
-  <div [class]="menuLocked ? 'col-md-2' : 'menu-unlocked'" [@visibleMenu]="getMenuState()" (mouseenter)="onMouseEnter()" (mouseleave)="onMouseLeave()">
+  <div class="left-menu" [class]="menuLocked ? 'col-md-2' : 'menu-unlocked'" [@visibleMenu]="getMenuState()" (mouseenter)="onMouseEnter()" (mouseleave)="onMouseLeave()">
     <app-menu-builder (locketEmitter)="menuLocked = $event"></app-menu-builder>
   </div>
   <div [class]="menuLocked ? 'col-md-10' : 'col-md-12'" class="builder" >
