--- a/frontend/src/app/page/components/grid-cell-item/grid-cell-item.component.css
+++ b/frontend/src/app/page/components/grid-cell-item/grid-cell-item.component.css
@@ -62,3 +62,9 @@
   position: relative;
   z-index: 1;
 }
+
+.menu-cell-item {
+  width: auto !important;
+  padding: 3px !important;
+  color: white;
+}
