--- a/frontend/src/app/page/components/grid-row/grid-row.component.css
+++ b/frontend/src/app/page/components/grid-row/grid-row.component.css
@@ -75,4 +75,10 @@ app-grid-cell {
   position: absolute;
 }
 
+.menu-row {
+  width: auto !important;
+  padding: 3px !important;
+  color: white;
+}
+
 
