--- a/frontend/src/app/page/pages/page-builder/components/plugin-mini-admin/plugin-mini-admin.component.html
+++ b/frontend/src/app/page/pages/page-builder/components/plugin-mini-admin/plugin-mini-admin.component.html
@@ -11,5 +11,5 @@
 <!--    </div>-->
 <!--  </div>-->
 <!--</div>-->
-<app-mini-admin [configAdmin]="miniAdminParams"></app-mini-admin>
+<app-mini-admin [setInitParams]="miniAdminParams"></app-mini-admin>
 <!--<button mat-raised-button color="primary" class="add-global-plugin"><i class="material-icons">add</i>Uložit jako nový plugin</button>-->
