--- a/frontend/src/app/page/components/palette-builder/page-block/page-block.component.css
+++ b/frontend/src/app/page/components/palette-builder/page-block/page-block.component.css
@@ -18,19 +18,6 @@
   cursor: row-resize;
 }
 
-.block-menu{
-  position: absolute;
-  top: -18px;
-  right: -17px;
-  opacity: 0;
-  transition: opacity 0.5s;
-  z-index: 999999999;
-}
-
-.block:hover .block-menu{
-  opacity: 1;
-}
-
 :host-context(.dragged) .block:hover .block-menu{
   opacity: 0;
 }
@@ -131,4 +118,52 @@
 .hider-new-row-button > ::ng-deep .animation-hider-container {
   position: relative;
   z-index: 1;
+}
+
+.move-menu-hover {
+  outline:  solid 0 transparent;
+  transition: none;
+  outline-color: red !important;
+  outline-width: 2px !important;
+  position: relative;
+  z-index: 1;
+}
+
+.frameCover div.btn {
+  background-color: #262b33;
+  border-radius: 0;
+  border: 1px solid #d6d6d6;
+  font-size: 12px;
+  height: 25px;
+  margin-right: 1px;
+  outline: 1px solid #000000;
+  position: relative;
+  top: 1px;
+  width: 25px;
+  padding: 0;
+}
+
+.frameCover div.btn i {
+  color: white;
+  display: block;
+  font-size: 18px;
+  position: relative !important;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.block-move-menu {
+  width: 153px;
+  position: absolute;
+  top: -31px;
+  left: 0px;
+  z-index: 1;
+  padding-bottom: 10px;
+}
+
+.block-menu-label {
+  width: auto !important;
+  padding: 3px !important;
+  color: white;
 }
