--- a/frontend/src/app/page/components/palette-builder/palette-builder.component.html
+++ b/frontend/src/app/page/components/palette-builder/palette-builder.component.html
@@ -1,19 +1,17 @@
 <div class="card card-primary card-outline">
   <div class="card-header">
     <h3 class="card-title">Editační plátno</h3>
-  </div> <!-- /.card-body -->
+  </div>
   <div class="card-body palette" [class.sortable-js-dragged]="sortableJsDragged$ | async">
-<!--    <app-palette-item-quick-menu></app-palette-item-quick-menu>-->
-
     <ul
       class="palette-block list-group listing-area clearfix"
       [class.dragged]="isDraggedContent"
       [class.resized]="isResized"
       #palette
       [sortablejs]="pageDetail.pageBlocks"
-      [sortablejsOptions]="{ group: 'shared', scroll: false, handle: '.handle' }">
-      <li (dragstart)="blockDragStart()" (dragend)="blockDragStop()" class="list-group-item palette-item" *ngFor="let item of pageDetail.pageBlocks; trackBy: trackByBlock">
-        <app-palette-block [pageBlock]="item" (resized)="isResized=$event"></app-palette-block>
+      [sortablejsOptions]="{ group: 'shared', handle: '.icon-move-block' }">
+      <li (dragstart)="blockDragStart()" (dragend)="blockDragStop()" class="list-group-item palette-item" *ngFor="let item of pageDetail.pageBlocks; trackBy: trackByBlock;index as i;">
+        <app-palette-block (deleteBlock)="deleteBlock(i)" [pageBlock]="item" (resized)="isResized=$event"></app-palette-block>
       </li>
     </ul>
   </div>
